--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  
+    "husky": {
+      "hooks": {
+        "precommit": "npm t",
+        "posttest": "eslint ./ --fix"
+      }
+    },
+  
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -34,5 +42,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^6.0.0"
   }
 }
