--- a/package.json
+++ b/package.json
@@ -15,16 +15,15 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
-  
-    "husky": {
-      "hooks": {
-        "precommit": "npm t",
-        "posttest": "eslint ./ --fix"
-      }
-    },
-  
+  "husky": {
+    "hooks": {
+      "precommit": "npm t",
+      "posttest": "eslint ./ --fix"
+    }
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
