--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "eslint",
+    "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "eslint ./",
+    "fixErrs": "eslint ./ --fix"
   },
   "husky": {
     "hooks": {
